Timeout + fallback implementados (eu acho).